# lppa

./: .gitignore  CHANGELOG.md  Makefile  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yaml
changes/: 1.doc  1.misc  2.doc  2.feature  3.bugfix  4.doc  4.feature  5.doc  5.feature  6.feature  7.feature
debian/: changelog  control  copyright  rules
lppa/: __init__.py  cli.py  constants.py
ppa/: __init__.py  __main__.py  auth.py  cli.py  ppa.py  processors.py  utils.py
tests/: test_auth.py  test_cli.py  test_ppa.py  test_processors.py  test_utils.py
