[metadata]
name = ppa
version = 0.1.0.dev1
description = Request PPAs for deb source packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/athos-ribeiro/ppa
license = GPLv3+
license_files = LICENSE
platform = any
author = Athos Ribeiro
author_email = athos.ribeiro@canonical.com
keywords =
  PPA
  Ubuntu
  Launchpad
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.6
install_requires =
  launchpadlib

[flake8]
max-line-length = 100
doctests = True
